--- a/7DaysToCheat.csproj
+++ b/7DaysToCheat.csproj
@@ -329,6 +329,8 @@
     <Compile Include="Classes\EspUtils.cs" />
     <Compile Include="Classes\FreeCraft.cs" />
     <Compile Include="Classes\GetAllItems.cs" />
+    <Compile Include="Classes\PlayerModifer.cs" />
+    <Compile Include="Classes\RecoilValues.cs" />
     <Compile Include="Classes\SceneDebugger.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Classes\Main.cs" />
