--- a/7DaysToCheat.csproj
+++ b/7DaysToCheat.csproj
@@ -332,9 +332,16 @@
     <Compile Include="Classes\PlayerModifer.cs" />
     <Compile Include="Classes\RecoilValues.cs" />
     <Compile Include="Classes\SceneDebugger.cs" />
+    <Compile Include="Classes\ServerManager.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Classes\Main.cs" />
     <Compile Include="Classes\Esp.cs" />
+    <Compile Include="Menus\AimbotMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menus\AimbotMenu.Designer.cs">
+      <DependentUpon>AimbotMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menus\BaseMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -367,6 +374,9 @@
     <None Include=".editorconfig" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Menus\AimbotMenu.resx">
+      <DependentUpon>AimbotMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Menus\BaseMenu.resx">
       <DependentUpon>BaseMenu.cs</DependentUpon>
     </EmbeddedResource>
