--- a/7DaysToCheat.csproj
+++ b/7DaysToCheat.csproj
@@ -324,6 +324,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Aimbot.cs" />
+    <Compile Include="Classes\BlockModifier.cs" />
+    <Compile Include="Classes\BlockValues.cs" />
     <Compile Include="Classes\ConfigHandler.cs" />
     <Compile Include="Classes\CreateMenu.cs" />
     <Compile Include="Classes\EspUtils.cs" />
@@ -343,6 +345,12 @@
     <Compile Include="Menus\AimbotMenu.Designer.cs">
       <DependentUpon>AimbotMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Menus\BlockEditorMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menus\BlockEditorMenu.Designer.cs">
+      <DependentUpon>BlockEditorMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menus\BaseMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -361,12 +369,6 @@
     <Compile Include="Overlay.Designer.cs">
       <DependentUpon>Overlay.cs</DependentUpon>
     </Compile>
-    <Compile Include="Menus\PlayerEditorMenu.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Menus\PlayerEditorMenu.Designer.cs">
-      <DependentUpon>PlayerEditorMenu.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\ItemSpawner.cs" />
     <Compile Include="Classes\WeaponModifier.cs" />
@@ -378,6 +380,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
+    <EmbeddedResource Include="Menus\BlockEditorMenu.resx">
+      <DependentUpon>BlockEditorMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ResourcesFolder\cheatbundle.unity3d" />
   </ItemGroup>
   <ItemGroup>
