--- a/7DaysToCheat.csproj
+++ b/7DaysToCheat.csproj
@@ -331,6 +331,7 @@
     <Compile Include="Classes\EspUtils.cs" />
     <Compile Include="Classes\FreeCraft.cs" />
     <Compile Include="Classes\GetAllItems.cs" />
+    <Compile Include="Classes\MenuButtonControlHandler.cs" />
     <Compile Include="Classes\PlayerModifer.cs" />
     <Compile Include="Classes\RecoilValues.cs" />
     <Compile Include="Classes\ResourceHandler.cs" />
@@ -345,17 +346,17 @@
     <Compile Include="Menus\AimbotMenu.Designer.cs">
       <DependentUpon>AimbotMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Menus\BlockEditorMenu.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Menus\BlockEditorMenu.Designer.cs">
-      <DependentUpon>BlockEditorMenu.cs</DependentUpon>
-    </Compile>
     <Compile Include="Menus\BaseMenu.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Menus\BaseMenu.Designer.cs">
       <DependentUpon>BaseMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Menus\BlockEditorMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menus\BlockEditorMenu.designer.cs">
+      <DependentUpon>BlockEditorMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="Menus\ESPMenu.cs">
       <SubType>Form</SubType>
@@ -369,21 +370,18 @@
     <Compile Include="Overlay.Designer.cs">
       <DependentUpon>Overlay.cs</DependentUpon>
     </Compile>
+    <Compile Include="Menus\PlayerEditorMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menus\PlayerEditorMenu.Designer.cs">
+      <DependentUpon>PlayerEditorMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\ItemSpawner.cs" />
     <Compile Include="Classes\WeaponModifier.cs" />
-    <Compile Include="ResourcesFolder\Resource.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource.resx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
-    <EmbeddedResource Include="Menus\BlockEditorMenu.resx">
-      <DependentUpon>BlockEditorMenu.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ResourcesFolder\cheatbundle.unity3d" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Menus\AimbotMenu.resx">
@@ -392,15 +390,14 @@
     <EmbeddedResource Include="Menus\BaseMenu.resx">
       <DependentUpon>BaseMenu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Menus\BlockEditorMenu.resx">
+      <DependentUpon>BlockEditorMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Menus\ESPMenu.resx">
       <DependentUpon>ESPMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Overlay.resx">
       <DependentUpon>Overlay.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ResourcesFolder\Resource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
